--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,16 @@
-appnope==0.1.0
-backports.shutil-get-terminal-size==1.0.0
-decorator==4.0.4
-Django==1.9
+channels==0.17.3
+decorator==4.0.9
+Django==1.10.5
 django-cors-headers==1.3.1
 django-crispy-forms==1.5.2
 django-filter==0.7
 django-toolbelt==0.0.1
 djangorestframework==3.5.3
-djangorestframework-jsonapi==2.1.1
-enum34==1.1.6
 gnureadline==6.3.3
-greenlet==0.4.10
-gunicorn==18.0
-inflection==0.3.1
 ipdb==0.10.1
 ipython==5.1.0
 ipython-genutils==0.1.0
-Markdown==2.6.5
-path.py==8.1.2
-pathlib2==2.1.0
-pexpect==4.0.1
-pickleshare==0.5
-prompt-toolkit==1.0.9
 psycopg2==2.6.2
-ptyprocess==0.5
 Pygments==2.1.3
-readline==6.2.4.1
-redis==2.10.5
-requests==2.8.1
 simplegeneric==0.8.1
 six==1.10.0
-static==0.4
-traitlets==4.3.1
-wcwidth==0.1.7
